# tabfloater

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yaml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: pr_companion.yaml  pr_extension.yaml  release_companion.yaml  release_extension.yaml
chrome-extension/: background.js  companion.js  floater.js  manifest.json  options.html  options.js  popup.js  qq.js  utilities.js
chrome-extension/sass/: tabfloater.scss
companion/: CMakeLists.txt  CPackOptions_win.txt  build.bat  build.sh  package.bat  rebuild.bat  rebuild.sh
companion/libs/loguru/: CMakeLists.txt
companion/libs/loguru/src/: loguru.cpp
companion/manifests/: manifest_chrome.json  manifest_firefox.json
companion/packaging/linux/: add_changelog.sh  build_appimage.sh  create_appimage.sh  ppa_upload.sh
companion/packaging/linux/appimage/: generate_appimage.sh  tabfloater-companion.appdata.xml  tabfloater-companion.desktop
companion/packaging/linux/install-resources/: bash_completion.sh
companion/packaging/linux/ubuntu-ppa/: README  changelog  control  copyright
companion/packaging/linux/ubuntu-ppa/debian/: README  changelog  control  copyright  postinst  prerm  tabfloater-companion.1  tabfloater-companion.manpages
companion/packaging/windows/: license.rtf  registry_patch.xml
companion/packaging/windows/installer/: license.rtf  registry_patch.xml
companion/packaging/windows/portable/: README.txt  register_manifests.bat  unregister_manifests.bat
companion/setup/: io.github.tabfloater.companion_SAMPLE.json  setup.sh
companion/src/: a.out  interactive.h  interactive_linux.cpp  logutil.cpp  logutil.h  logutil_linux.cpp  logutil_windows.cpp  tabfloater_companion.cpp  test.cpp  windowhandler.h  windowhandler_linux.cpp  windowhandler_windows.cpp
companions/gnome-extension/: extension.js  metadata.json
companions/linux/: tabfloater_companion  tabfloater_companion.c  tabfloater_companion.cpp  wind.c  window
companions/linux/sample_jsons/: input1  input2  input3  output1  output2  output3  spec
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  RELEASING.md  firefox_build_instructions.txt
extension/: .eslintignore  .eslintrc.json  background.js  companion.js  floater.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  postinstall.bat  postinstall.sh  run_firefox.bat  run_firefox.sh
extension/css/: tabfloater.css
extension/src/: manifest.json  manifest_firefox.json
extension/src/css/: tabfloater.css  uk-switch.css
extension/src/html/: background.html  options.html  options_new.html  popup.html  review.html  updated.html  welcome.html
extension/src/js/: background.js  companion.js  constants.js  environment.js  floater.js  gtags.js  logger.js  main.js  notifier.js  options.js  popup.js  positioning.js  qq.js  stripe.js  welcome.js
extension/src/js/analytics/: analytics.js  googleAnalytics.js  gtags.js  nullAnalytics.js
extension/src/js/dialog/: options.js  popup.js
extension/src/js/logging/: consoleLogger.js  logger.js  nullLogger.js
extension/src/js/pages/: options.js  review.js  updated.js  welcome.js
extension/src/js/positioning/: areaCalculator.js  positioner.js
extension/src/js/positioning/contentScripts/: areaCalculator.js
extension/src/sass/: tabfloater.scss
